syntax = "proto3";

option csharp_namespace = "DbManager.Microservice";

package dbmanager;

// The greeting service definition.
service DbManager {
  // Sends a greeting
  rpc RemoveExpiredLinks (RemoveRequest) returns (RemoveReply);
}

// The request message containing the user's name.
message RemoveRequest {
  string name = 1;
}

// The response message containing the greetings.
message RemoveReply {
  bool complete = 1;
}
